# InterCalcGTK

./: .gitignore  Cargo.toml  README.md  main.py  main.spec  pyinstaller.spec  pyproject.toml
.github/workflows/: binaries_build.yml  get_linux_exe.yml  get_windows_exe.yml  linux_build.yml  windows_build.yml
src/: about.rs  calculator.py  main.py  main.rs  svg_button.py  svg_logo.py  utils.rs  window.rs
src/calculator/: about_dialog.py  button_grid.py  calculator_window.py  utils.py
src/calculator/widgets/: svg_button.py  svg_logo.py
src/widgets/: button_grid.rs  mod.rs  svg_button.rs  svg_logo.rs
