[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "InterCalc"
Repository = "https://github.com/niltonperimneto/InterCalc.git"
version = "0.0.3"
description = "A simple calculator made in Python with the GTK4 toolkit."
authors = [
    { name="Nilton Perim Neto", email="niltonperimneto@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "PyGObject>=3.42",
    "pycairo",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
InterCalc = "InterCalc:main"
