[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "InterCalc"
version = "1.0"
description = "A simple calculator made in Python with the GTK4 toolkit."
authors = [
    { name="Nilton Perim Neto", email="niltonperimneto@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "PyGObject",
    "pycairo",
]

[project.urls]
Repository = "https://github.com/InternationalIngles/InterCalc.git"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
InterCalc = "main:main"
